wip: add the code of testing thread memory layout

--- a/concurrency/Makefile
+++ b/concurrency/Makefile
@@ -1,7 +1,7 @@
 FLAGS = -Wall -pthread -g 
 
 clean:
-	rm -rf main-thread-intro main-thread-api main-thread-lock
+	rm -rf main-thread-intro main-thread-api main-thread-lock mem-layout-test
 
 main-thread-intro: main-thread-intro.c common_threads.h
 	gcc -o main-thread-intro main-thread-intro.c $(FLAGS)
@@ -11,3 +11,6 @@ main-thread-api: main-thread-api.c common_threads.h
 
 main-thread-lock: main-thread-lock.c common_threads.h
 	gcc -o main-thread-lock main-thread-lock.c $(FLAGS)
+
+mem-layout-test: mem-layout-test.c
+	gcc -o mem-layout-test mem-layout-test.c $(FLAGS)
